# ender-airplay-streamer

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: AirplayStreamerConfig.cmake.in  FindFFmpeg.cmake
include/: airplay_streamer.hpp
lib/: CMakeLists.txt  byteutils.c  byteutils.h  dnssd.c  dnssd.h  httpd.c  raop_ntp.c  raop_rtp_mirror.c  threads.h  windows_compat.c  windows_compat.h
lib/llhttp/: CMakeLists.txt
lib/playfair/: CMakeLists.txt
renderers/: CMakeLists.txt
src/: airplay_streamer.cpp
test/: test.cpp
